tests/e2e/unary_complex_2.error
Error: syntax error in story at line 1, column 9

1|    a = not 2 == not 3 or not 4
              ^

E0043: `2` is not allowed here. Allowed: ['_COMMA', '_CSB', '_CCB', '_NL', '_AS']
